samples/_failures_safe/1761276720_746bd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_874f2465.c: In function ‘parser_expect’:
./samples/SAFE/__tmp_874f2465.c:170:35: error: expected ‘)’ at end of input
  170 |     if (parser_accept(parser, type
      |                      ~            ^
      |                                   )
./samples/SAFE/__tmp_874f2465.c:170:5: error: expected declaration or statement at end of input
  170 |     if (parser_accept(parser, type
      |     ^~
